New workers class and workers controller